# tkge

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
App/: CMakeLists.txt
App/Src/: Main.cpp
Assets/Shaders/: Default.frag  Default.vert
Assets/shaders/: triangle.vert
Ext/: .gitignore  CMakeLists.txt
Lib/: CMakeLists.txt
Lib/Include/Tkge/: AssetLoader.hpp  Engine.hpp  Transform.hpp  Utilities.hpp
Lib/Include/Tkge/Assets/: IAsset.hpp  TextAsset.hpp
Lib/Include/Tkge/Graphics/: Drawable.hpp  IGeometry.hpp  PipelineFixedState.hpp  Primitive.hpp  RenderInstance.hpp  Renderer.hpp  ResourcePool.hpp  Shader.hpp  Shape.hpp  Texture.hpp  TextureSampler.hpp  Vertex.hpp  VertexArray.hpp
Lib/Src/: AssetLoader.cpp  Engine.cpp  Transform.cpp  Utilities.cpp
Lib/Src/Assets/: IAsset.cpp  TextAsset.cpp
Lib/Src/Detail/: BufferPool.hpp  PipelinePool.hpp  SamplerPool.hpp
Lib/Src/Glsl/: Default.frag  Default.vert  default.frag  triangle.vert
Lib/Src/Graphics/: Renderer.cpp  ResourcePool.cpp  Shader.cpp  Shape.cpp  Texture.cpp  VertexArray.cpp
Scripts/: FormatCode.sh
Tests/: CMakeLists.txt  TestAssetLoader.cpp
app/: CMakeLists.txt
app/src/: main.cpp
assets/shaders/: default.frag
lib/: CMakeLists.txt
lib/include/tkge/: assetLoader.hpp  engine.hpp
lib/include/tkge/Assets/: IAsset.hpp  TextAsset.hpp
lib/include/tkge/graphics/: ResourcePool.hpp  pipeline_fixed_state.hpp  primitive.hpp  renderer.hpp  resource_pool.hpp  shader.hpp  vertex.hpp  vertex_array.hpp
lib/src/: assetLoader.cpp  engine.cpp
lib/src/Assets/: IAsset.cpp  TextAsset.cpp
lib/src/detail/: buffer_pool.hpp  pipeline_pool.hpp
lib/src/graphics/: ResourcePool.cpp  renderer.cpp  resource_pool.cpp  shader.cpp  vertex_array.cpp
scripts/: format_code.sh
